[package]
name = "mojang-api"
version = "0.5.1"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "A simple library for interfacing with the Mojang API. Includes full support for async/await."
repository = "https://github.com/caelunshun/mojang-api-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["minecraft"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.61"
sha1 = "^0.6.0"
num-bigint = "^0.3.1"
uuid = { version = "^0.8.1", features = ["v4", "serde"] }
log = "^0.4.11"

[dev-dependencies]
mockito = "^0.28.0"
tokio = { version = "^1.0.1", features = ["full"] }
